--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ boto3==1.17.42
 botocore==1.20.42
 dj-database-url==0.5.0
 Django==3.1.7
+django-environ==0.4.5
 django-heroku==0.3.1
 gunicorn==20.1.0
 jmespath==0.10.0
